# backup_to_gcp

./: .gitignore  README.md  backup_to_gcp_bucket.py  compare_directories.py  google_cloud_wrapper.py  gsutil_wrapper.py  logging_helper.py  pyproject.toml
src/: backup_to_gcp_bucket.py  compare_directories.py
tests/: test_google_cloud_wrapper.py  test_logging.py
utilities/: gsutil_wrapper.py
